# ArbitrarilyLongNumberCalculator

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  common.cmake
cmake/: clang_tidy.cmake  compiler_warnings.cmake  default_settings.cmake  doctest.cmake  doxygen.cmake  prevent_source_builds.cmake  static_analyzers.cmake
src/: CMakeLists.txt  addition.h  bignumber.h  bignumbercalculator.h  division.h  exponentiation.h  main.cpp  multiplication.h  operation.h  options.cpp  options.h  subtraction.h
